--- a/CoreMVC5_UsedBookProject/Views/Buyer/Wish.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/Wish.cshtml
@@ -21,7 +21,14 @@
         {
             <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
                 <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px;">
-                    <img src="~/icon/WishsDeafultPicture.jpg" asp-append-version="true" class="m-auto" alt="@item.Title" onerror="this.src='~/icon/WishsDeafultPicture.jpg'" />
+                    @if(item.ISBN.Length == 10)
+                    {
+                        <img src=@($"https://cdnec.sanmin.com.tw/product_images/{item.ISBN.Substring(2,3)}/{item.ISBN.Substring(3,7)}.jpg") asp-append-version="true" class="m-auto" alt="@item.Title" onerror="this.src='../icon/WishsDeafultPicture.jpg'" />
+                    }
+                    @if (item.ISBN.Length == 13)
+                    {
+                        <img src=@($"https://cdnec.sanmin.com.tw/product_images/{item.ISBN.Substring(3,3)}/{item.ISBN.Substring(3,9)}.jpg") asp-append-version="true" class="m-auto" alt="@item.Title" />
+                    }
                 </div>
                 <table class="container-fluid">
                     <tr><td>@Html.DisplayNameFor(model => model.Title)</td><td>@item.Title</td></tr>
