--- a/CoreMVC5_UsedBookProject/Views/Home/Details.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/Details.cshtml
@@ -42,11 +42,11 @@
                                     </button>
                                 </div>
                                 <div class="modal-body">
-                                    確認要送出訂單?
+                                    確認要送出購買訂單?
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
-                                    <a href="@Url.Action("CreateOrder", "Buyer", new {ProductId=Model.ProductId, Sellername = Model.CreateBy, trade = Model.Trade})" class="btn btn-primary">確認</a>
+                                    <a href="@Url.Action("CreateOrder", "Buyer", new {ProductId=Model.ProductId, Sellername = Model.CreateBy, trade = Model.Trade, Order = "買賣"})" class="btn btn-primary">確認</a>
                                 </div>
                             </div>
                         </div>
@@ -57,7 +57,7 @@
         @if (Model.Trade.Contains("交換"))
         {
             <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop" onclick="checklogin()">
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop2" onclick="checklogin()">
                 交換
             </button>
             @if (User.Identity.IsAuthenticated)
@@ -65,7 +65,7 @@
                 @if (User.Claims.FirstOrDefault(c => c.Type.Contains("nameidentifier")).Value != Model.CreateBy)
                 {
                     <!-- Modal -->
-                    <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                    <div class="modal fade" id="staticBackdrop2" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                         <div class="modal-dialog">
                             <div class="modal-content">
                                 <div class="modal-header">
@@ -75,11 +75,11 @@
                                     </button>
                                 </div>
                                 <div class="modal-body">
-                                    確認要送出訂單?
+                                    確認要送出交換訂單?
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">取消</button>
-                                    <a href="@Url.Action("CreateOrder", "Buyer", new {ProductId=Model.ProductId, Sellername = Model.CreateBy, trade = Model.Trade})" class="btn btn-primary">確認</a>
+                                    <a href="@Url.Action("CreateOrder", "Buyer", new {ProductId=Model.ProductId, Sellername = Model.CreateBy, trade = Model.Trade, Order = "交換"})" class="btn btn-primary">確認</a>
                                 </div>
                             </div>
                         </div>
