--- a/CoreMVC5_UsedBookProject/Views/AdministratorHomePage/AdminIndex.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorHomePage/AdminIndex.cshtml
@@ -86,7 +86,7 @@
                         <input type="hidden" name="Image1" class="form-control" value="@(Model.Image1 == null ? "無圖片" : Model.Image1)" id="Image1" readonly />
                         <button type="button" class="btn btn-danger d-block" id="Image1-clear">X</button>
                         <div id="img1Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black;">
-                            <img src="" alt="img1" id="img1" onerror="errorLoad(this)">
+                            <img src="" alt="img1" id="img1" onerror="this.src='../pictures/WishsDeafultPicture.jpg'">
                         </div>
                         <div class="d-flex align-items-end mt-2">
                             <label for="file1" class="btn btn-primary">
@@ -101,7 +101,7 @@
                         <input type="hidden" name="Image2" class="form-control" value="@(Model.Image2 == null ? "無圖片" : Model.Image2)" id="Image2" readonly />
                         <button type="button" class="btn btn-danger d-block" id="Image2-clear">X</button>
                         <div id="img2Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black;">
-                            <img src="" alt="img1" id="img1" onerror="errorLoad(this)">
+                            <img src="" alt="img1" id="img1" onerror="this.src='../pictures/WishsDeafultPicture.jpg'">
                         </div>
                         <div class="d-flex align-items-end mt-2">
                             <label for="file2" class="btn btn-primary">
@@ -116,7 +116,7 @@
                         <input type="hidden" name="Image3" class="form-control" value="@(Model.Image3 == null ? "無圖片" : Model.Image3)" id="Image3" readonly />
                         <button type="button" class="btn btn-danger d-block" id="Image3-clear">X</button>
                         <div id="img3Div" class="mb-3 p-2 d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px; background: white; border: 1px solid black;">
-                            <img src="" alt="img1" id="img1" onerror="errorLoad(this)">
+                            <img src="" alt="img1" id="img1" onerror="this.src='../pictures/WishsDeafultPicture.jpg'">
                         </div>
                         <div class="d-flex align-items-end mt-2">
                             <label for="file3" class="btn btn-primary">
