--- a/CoreMVC5_UsedBookProject/Views/Buyer/BarterOrderDetails.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/BarterOrderDetails.cshtml
@@ -9,51 +9,46 @@
 <div class="container-fluid">
     <h1>交換訂單詳情</h1>
     <form action="~/Buyer/BarterOrderDetails" method="post">
-        <table class="container-fluid">
-            <tr><td>@Html.DisplayNameFor(model => model.OrderId)</td><td>@Model.OrderId</td></tr>
+        <div class="container-fluid my-2">
+            <h2>@Model.Trade</h2>
             @if (Model.Status == "待確認" || Model.Status == "已成立")
             {
-                <tr>
-                    <td>@Html.DisplayNameFor(model => model.DenyReason)</td>
-                    <td>
+                <p>
+                    <span>@Html.DisplayNameFor(model => model.DenyReason) </span>
+                    <span>
                         <div class="d-flex">
                             <textarea asp-for="DenyReason" class="form-control show-length" placeholder="輸入取消原因"></textarea>
                             <p id="DenyReason_length" class="text-right ml-4"></p>
                         </div>
                         <span asp-validation-for="DenyReason" class="text-danger"></span>
-                    </td>
-                </tr>
+                    </span>
+                </p>
             }
             else
             {
-                <tr><td>@Html.DisplayNameFor(model => model.DenyReason)</td><td>@Model.DenyReason</td></tr>
+                <p><span>@Html.DisplayNameFor(model => model.DenyReason) </span><span>@Model.DenyReason</span></p>
             }
-            <input type="hidden" name="OrderId" class="form-control" id="OrderId" value="@Model.OrderId" readonly />
-            <input type="hidden" name="trade" class="form-control" id="trade" value="@Model.Trade" readonly />
-            <tr><td>@Html.DisplayNameFor(model => model.Trade)</td><td>@Model.Trade</td></tr>
-            <tr><td>@Html.DisplayNameFor(model => model.Status)</td><td>@Model.Status</td></tr>
-        </table>
+            <p><span>@Html.DisplayNameFor(model => model.Status) </span><span>@Model.Status</span></p>
+        </div>
         <h2>對方的商品 @Model.SellerName</h2>
         <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
-            <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px;">
-                <img src="../Images/Products/@Model.SellerProductId/@Model.SellerImage1" asp-append-version="true" class="m-auto" alt="@Model.SellerTitle" onerror="errorLoad(this)" />
+            <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px;">
+                <img src="../Images/Products/@Model.SellerProductId/@Model.SellerImage1" asp-append-version="true" class="m-auto" alt="@Model.SellerTitle" onerror="this.src='../pictures/WishsDeafultPicture.jpg'" />
             </div>
-            <table class="container-fluid">
-                <tr><td>@Html.DisplayNameFor(model => model.SellerProductId)</td><td>@Model.SellerProductId</td></tr>
-                <tr><td>@Html.DisplayNameFor(model => model.SellerTitle)</td><td>@Model.SellerTitle</td></tr>
-                <tr><td>@Html.DisplayNameFor(model => model.SellerISBN)</td><td>@Model.SellerISBN</td></tr>
-                <tr><td>@Html.DisplayNameFor(model => model.SellerAuthor)</td><td>@Model.SellerAuthor</td></tr>
-                <tr><td>@Html.DisplayNameFor(model => model.Trade)</td><td>@Model.Trade</td></tr>
-                <tr><td>@Html.DisplayNameFor(model => model.Status)</td><td>@Model.Status</td></tr>
-            </table>
+            <div class="container-fluid my-2">
+                <h2>@Model.SellerTitle</h2>
+                <h2>@Model.Trade</h2>
+                <p><span>@Html.DisplayNameFor(model => model.SellerISBN) </span><span>@Model.SellerISBN</span></p>
+                <p><span>@Html.DisplayNameFor(model => model.SellerAuthor) </span><span>@Model.SellerAuthor</span></p>
+            </div>
             <div class="action d-flex flex-row flex-md-column justify-content-between align-items-center">
                 <a href="@Url.Action("Details", "Buyer", new {ProductId = Model.SellerProductId})" class="btn btn-info mt-2"><i class="bi bi-info-circle"></i> 商品詳情</a>
             </div>
         </div>
         <h2>我的商品 @Model.BuyerName</h2>
         <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
-            <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px;">
-                <img src="../Images/Products/@Model.BuyerProductId/@Model.BuyerImage1" asp-append-version="true" class="m-auto" alt="@Model.BuyerTitle" onerror="errorLoad(this)" />
+            <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px;">
+                <img src="../Images/Products/@Model.BuyerProductId/@Model.BuyerImage1" asp-append-version="true" class="m-auto" alt="@Model.BuyerTitle" onerror="this.src='../pictures/WishsDeafultPicture.jpg'" />
             </div>
             <table class="container-fluid">
                 <tr><td>@Html.DisplayNameFor(model => model.BuyerProductId)</td><td>@Model.BuyerProductId</td></tr>
@@ -77,7 +72,7 @@
             }
             @if (Model.Status == "待確認" || Model.Status == "已成立")
             {
-                <button type="submit" class="btn btn-primary mr-2" name="submit" value="取消訂單">取消訂單</button>
+                <button type="submit" class="btn btn-danger mr-2" name="submit" value="取消訂單">取消訂單</button>
             }
             <button type="button" onclick="history.go(-1)" class="btn btn-secondary disable-onbeforeunload">取消</button>
         </div>
