--- a/CoreMVC5_UsedBookProject/Views/Buyer/Wish.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/Wish.cshtml
@@ -1,33 +1,42 @@
 ﻿@using CoreMVC5_UsedBookProject.ViewModels;
 @model WishsViewModel
 <div class="container-fluid">
-    <h2>願望清單</h2>
-    <form method="post" enctype="multipart/form-data" action="/Buyer/Wish">
-        <div class="form-group">
-            <label asp-for="Title" class="control-label"></label>
-            <input asp-for="Title" class="form-control" />
-            <span asp-validation-for="Title" class="text-danger"></span>
+    <h1>願望清單</h1>
+    <div class="row">
+        <div class="col-12 col-md-6">
+            <form method="post" enctype="multipart/form-data" action="/Buyer/Wish">
+                <div class="form-group">
+                    <label asp-for="Title" class="control-label"></label>
+                    <input asp-for="Title" class="form-control" />
+                    <span asp-validation-for="Title" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="ISBN" class="control-label"></label>
+                    <input asp-for="ISBN" class="form-control" />
+                    <span asp-validation-for="ISBN" class="text-danger"></span>
+                </div>
+                <button type="submit" class="btn btn-outline-primary mb-2">增至許願井</button>
+            </form>
         </div>
-        <div class="form-group">
-            <label asp-for="ISBN" class="control-label"></label>
-            <input asp-for="ISBN" class="form-control" />
-            <span asp-validation-for="ISBN" class="text-danger"></span>
+        <div class="col-12 col-md-6">
+            <p>進入願望清單後，</p>
+            <p>若賣場中有此商品將顯示<span class="text-success">賣場有此商品</span>，</p>
+            <p>否則顯示<span class="text-danger">賣場尚無此商品</span>。</p>
         </div>
-        <button type="submit" class="btn btn-outline-primary">增至許願井</button>
-    </form>
+    </div>
     @if (Model.Wishs.Count > 0)
     {
         @foreach (var item in Model.Wishs)
         {
             <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
-                <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px;">
+                <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px;">
                     @if(item.ISBN.Length == 10)
                     {
-                        <img src=@($"https://cdnec.sanmin.com.tw/product_images/{item.ISBN.Substring(2,3)}/{item.ISBN.Substring(3,7)}.jpg") asp-append-version="true" class="m-auto" alt="@item.Title" onerror="this.src='../icon/WishsDeafultPicture.jpg'" />
+                        <img src=@($"https://cdnec.sanmin.com.tw/product_images/{item.ISBN.Substring(2,3)}/{item.ISBN.Substring(3,7)}.jpg") asp-append-version="true" class="m-auto" alt="@item.Title" onerror="this.src='../pictures/WishsDeafultPicture.jpg'" />
                     }
                     @if (item.ISBN.Length == 13)
                     {
-                        <img src=@($"https://cdnec.sanmin.com.tw/product_images/{item.ISBN.Substring(3,3)}/{item.ISBN.Substring(3,9)}.jpg") asp-append-version="true" class="m-auto" alt="@item.Title" onerror="this.src='../icon/WishsDeafultPicture.jpg'" />
+                        <img src=@($"https://cdnec.sanmin.com.tw/product_images/{item.ISBN.Substring(3,3)}/{item.ISBN.Substring(3,9)}.jpg") asp-append-version="true" class="m-auto" alt="@item.Title" onerror="this.src='../pictures/WishsDeafultPicture.jpg'" />
                     }
                 </div>
                 <table class="container-fluid">
