--- a/CoreMVC5_UsedBookProject/Views/Seller/BarterOrderDetails.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/BarterOrderDetails.cshtml
@@ -8,16 +8,15 @@
 }
 <div class="container-fluid">
     <h1>交換訂單詳情</h1>
-    <table class="container-fluid">
-        <tr><td>@Html.DisplayNameFor(model => model.OrderId)</td><td>@Model.OrderId</td></tr>
-        <tr><td>@Html.DisplayNameFor(model => model.DenyReason)</td><td>@Model.DenyReason</td></tr>
-        <tr><td>@Html.DisplayNameFor(model => model.Trade)</td><td>@Model.Trade</td></tr>
-        <tr><td>@Html.DisplayNameFor(model => model.Status)</td><td>@Model.Status</td></tr>
-    </table>
+    <div class="container-fluid my-2">
+        <h2>@Model.Trade</h2>
+        <p><span>@Html.DisplayNameFor(model => model.DenyReason) </span><span>@Model.DenyReason</span></p>
+        <p><span>@Html.DisplayNameFor(model => model.Status) </span><span>@Model.Status</span></p>
+    </div>
     <h2>我的商品 @Model.SellerName</h2>
     <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
         <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px;">
-            <img src="../Images/Products/@Model.SellerProductId/@Model.SellerImage1" asp-append-version="true" class="m-auto" alt="@Model.SellerTitle" onerror="errorLoad(this)" />
+            <img src="../Images/Products/@Model.SellerProductId/@Model.SellerImage1" asp-append-version="true" class="m-auto" alt="@Model.SellerTitle" onerror="this.src='../pictures/WishsDeafultPicture.jpg'" />
         </div>
         <table class="container-fluid">
             <tr><td>@Html.DisplayNameFor(model => model.SellerProductId)</td><td>@Model.SellerProductId</td></tr>
@@ -34,7 +33,7 @@
     <h2>對方的商品 @Model.BuyerName</h2>
     <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
         <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px;">
-            <img src="../Images/Products/@Model.BuyerProductId/@Model.BuyerImage1" asp-append-version="true" class="m-auto" alt="@Model.BuyerTitle" onerror="errorLoad(this)" />
+            <img src="../Images/Products/@Model.BuyerProductId/@Model.BuyerImage1" asp-append-version="true" class="m-auto" alt="@Model.BuyerTitle" onerror="this.src='../pictures/WishsDeafultPicture.jpg'" />
         </div>
         <table class="container-fluid">
             <tr><td>@Html.DisplayNameFor(model => model.BuyerProductId)</td><td>@Model.BuyerProductId</td></tr>
@@ -75,7 +74,7 @@
         {
             <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
                 <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px;">
-                    <img src="../Images/Products/@item.ProductId/@item.Image1" asp-append-version="true" class="m-auto" alt="@item.Title" onerror="errorLoad(this)" />
+                    <img src="../Images/Products/@item.ProductId/@item.Image1" asp-append-version="true" class="m-auto" alt="@item.Title" onerror="this.src='../pictures/WishsDeafultPicture.jpg'" />
                 </div>
                 <table class="container-fluid">
                     <tr><td>@Html.DisplayNameFor(model => model.SellerProductId)</td><td>@item.ProductId</td></tr>
