--- a/CoreMVC5_UsedBookProject/Views/Seller/OrderDetails.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/OrderDetails.cshtml
@@ -8,26 +8,24 @@
 }
 <div class="container-fluid">
     <h1>買賣訂單詳情</h1>
-    <table class="container-fluid">
-        <tr><td>@Html.DisplayNameFor(model => model.OrderId)</td><td>@Model.OrderId</td></tr>
-        <tr><td>@Html.DisplayNameFor(model => model.DenyReason)</td><td>@Model.DenyReason</td></tr>
-        <tr><td>@Html.DisplayNameFor(model => model.Trade)</td><td>@Model.Trade</td></tr>
-        <tr><td>@Html.DisplayNameFor(model => model.SellerUnitPrice)</td><td>@(decimal.Round(Model.SellerUnitPrice, 0) == 0 ? "" : decimal.Round(Model.SellerUnitPrice, 0))</td></tr>
-        <tr><td>@Html.DisplayNameFor(model => model.Status)</td><td>@Model.Status</td></tr>
-    </table>
+    <div class="container-fluid my-2">
+        <h2>@Model.Trade</h2>
+        <h2>NT$@(decimal.Round(Model.SellerUnitPrice, 0) == 0 ? "" : decimal.Round(Model.SellerUnitPrice, 0))</h2>
+        <p><span>@Html.DisplayNameFor(model => model.DenyReason) </span><span>@Model.DenyReason</span></p>
+        <p><span>@Html.DisplayNameFor(model => model.Status) </span><span>@Model.Status</span></p>
+    </div>
     <h2>賣家的商品 @Model.SellerName</h2>
     <div class="p-2 d-flex flex-column flex-md-row align-items-center product-card my-1 gap-5px">
-        <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; background-color: white; max-width: 200px;">
-            <img src="../Images/Products/@Model.SellerProductId/@Model.SellerImage1" asp-append-version="true" class="m-auto" alt="@Model.SellerTitle" onerror="errorLoad(this)" />
+        <div class="m-auto d-flex align-items-center" style="width: 100%; aspect-ratio: 1 / 1; max-width: 200px;">
+            <img src="../Images/Products/@Model.SellerProductId/@Model.SellerImage1" asp-append-version="true" class="m-auto" alt="@Model.SellerTitle" onerror="this.src='../pictures/WishsDeafultPicture.jpg'" />
         </div>
-        <table class="container-fluid">
-            <tr><td>@Html.DisplayNameFor(model => model.SellerProductId)</td><td>@Model.SellerProductId</td></tr>
-            <tr><td>@Html.DisplayNameFor(model => model.SellerTitle)</td><td>@Model.SellerTitle</td></tr>
-            <tr><td>@Html.DisplayNameFor(model => model.SellerISBN)</td><td>@Model.SellerISBN</td></tr>
-            <tr><td>@Html.DisplayNameFor(model => model.SellerAuthor)</td><td>@Model.SellerAuthor</td></tr>
-            <tr><td>@Html.DisplayNameFor(model => model.SellerUnitPrice)</td><td>@(decimal.Round(Model.SellerUnitPrice, 0) == 0 ? "" : decimal.Round(Model.SellerUnitPrice, 0))</td></tr>
-            <tr><td>@Html.DisplayNameFor(model => model.Status)</td><td>@Model.Status</td></tr>
-        </table>
+        <div class="container-fluid my-2">
+            <h2>@Model.SellerTitle</h2>
+            <h2>@Model.Trade</h2>
+            <h2>NT$@(decimal.Round(Model.SellerUnitPrice, 0) == 0 ? "" : decimal.Round(Model.SellerUnitPrice, 0))</h2>
+            <p><span>@Html.DisplayNameFor(model => model.SellerISBN) </span><span>@Model.SellerISBN</span></p>
+            <p><span>@Html.DisplayNameFor(model => model.SellerAuthor) </span><span>@Model.SellerAuthor</span></p>
+        </div>
         <div class="action d-flex flex-row flex-md-column justify-content-between align-items-center">
             <a href="@Url.Action("Details", "Buyer", new {ProductId = Model.SellerProductId})" class="btn btn-info mt-2"><i class="bi bi-info-circle"></i> 商品詳情</a>
         </div>
@@ -39,7 +37,7 @@
             <form action="~/Seller/OrderDetails" method="post">
                 <input type="hidden" name="OrderId" value="@Model.OrderId">
                 <input type="hidden" name="trade" value="@Model.Trade">
-                <button type="submit" class="btn btn-danger mr-2" name="submit" value="接受交易">接受交易</button>
+                <button type="submit" class="btn btn-primary mr-2" name="submit" value="接受交易">接受交易</button>
                 <button type="submit" class="btn btn-danger mr-2" name="submit" value="拒絕交易">拒絕交易</button>
             </form>
         }
