--- a/CoreMVC5_UsedBookProject/Views/Shared/_AsidePartial.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_AsidePartial.cshtml
@@ -7,13 +7,7 @@
     string action = route.Values["action"] != null ? route.Values["action"].ToString() : "";
 }
 <ul class="pl-0" id="menu">
-    <li class="list-unstyled aside-text">
-        <p class="text-left pl-2 py-3 mb-0"><strong>首頁</strong></p>
-    </li>
-    <li class="list-unstyled aside-link">
-        <a class="text-left pl-2 py-3 d-block mb-0 text-decoration-none" href="@Url.Action("Index", "Home", new {})"><i class="bi bi-house-door-fill"></i> 主首頁</a>
-    </li>
-    @if (controller == "Home" || controller == "Buyer")
+    @if (controller == "Home" || controller == "Buyer" || action == "Login")
     {
         <li class="list-unstyled aside-link">
             <a class="text-left pl-2 py-3 d-block mb-0 text-decoration-none" href="@Url.Action("ProductsList", "Home", new {trade = "買賣"})"><i class="bi bi-cart-fill"></i> 買賣賣場</a>
@@ -22,10 +16,10 @@
             <a class="text-left pl-2 py-3 d-block mb-0 text-decoration-none" href="@Url.Action("ProductsList", "Home", new {trade = "交換"})"><i class="bi bi-cart-fill"></i> 交換賣場</a>
         </li>
         <li class="list-unstyled aside-link">
-            <a class="text-left pl-2 py-3 d-block mb-0 text-decoration-none" href="@Url.Action("Index", "Seller", new {})"><i class="bi bi-shop"></i> 賣家中心</a>
+            <a class="text-left pl-2 py-3 d-block mb-0 text-decoration-none" href="@Url.Action("Wish", "Home", new {})"><i class="bi bi-star-half"></i> 大眾許願清單</a>
         </li>
         <li class="list-unstyled aside-link">
-            <a class="text-left pl-2 py-3 d-block mb-0 text-decoration-none" href="@Url.Action("Wish", "Home", new {})"><i class="bi bi-star-half"></i> 許願清單</a>
+            <a class="text-left pl-2 py-3 d-block mb-0 text-decoration-none" href="@Url.Action("Index", "Seller", new {})"><i class="bi bi-shop"></i> 賣家中心</a>
         </li>
     }
     @if (controller == "Seller")
@@ -70,23 +64,26 @@
             <a class="text-left pl-2 py-3 d-block mb-0 text-decoration-none" href="@Url.Action("ChangePassword", "Account", new {})"><i class="bi bi-info-circle-fill"></i> 變更密碼</a>
         </li>
     }
-    else if (controller == "Home" || controller == "Buyer")
+    else if ((controller == "Home" || controller == "Buyer") && User.Identity.IsAuthenticated)
     {
-        <li class="list-unstyled aside-text">
-            <p class="text-left pl-2 py-3 mb-0"><strong>訂單管理</strong></p>
-        </li>
-        <li class="list-unstyled aside-link">
-            <a class="text-left pl-2 py-3 d-block mb-0 text-decoration-none" href="@Url.Action("MySales", "Buyer", new {trade = "買賣"})"><i class="bi bi-file-text-fill"></i> 買賣訂單紀錄</a>
-        </li>
-        <li class="list-unstyled aside-link">
-            <a class="text-left pl-2 py-3 d-block mb-0 text-decoration-none" href="@Url.Action("MySales", "Buyer", new {trade = "交換"})"><i class="bi bi-file-text-fill"></i> 交換訂單紀錄</a>
-        </li>
-        <li class="list-unstyled aside-link">
-            <a class="text-left pl-2 py-3 d-block mb-0 text-decoration-none" href="@Url.Action("Shoppingcart", "Buyer", new {})"><i class="bi bi-cart4"></i> 購物車</a>
-        </li>
-        <li class="list-unstyled aside-link">
-            <a class="text-left pl-2 py-3 d-block mb-0 text-decoration-none" href="@Url.Action("Wish", "Buyer", new {})"><i class="bi bi-star-half"></i> 許願井</a>
-        </li>
+        @if (User.IsInRole("User"))
+        {
+            <li class="list-unstyled aside-text">
+            <p class="text-left pl-2 py-3 mb-0"><strong>買家管理</strong></p>
+            </li>
+            <li class="list-unstyled aside-link">
+                <a class="text-left pl-2 py-3 d-block mb-0 text-decoration-none" href="@Url.Action("MySales", "Buyer", new {trade = "買賣"})"><i class="bi bi-file-text-fill"></i> 買賣訂單紀錄</a>
+            </li>
+            <li class="list-unstyled aside-link">
+                <a class="text-left pl-2 py-3 d-block mb-0 text-decoration-none" href="@Url.Action("MySales", "Buyer", new {trade = "交換"})"><i class="bi bi-file-text-fill"></i> 交換訂單紀錄</a>
+            </li>
+            <li class="list-unstyled aside-link">
+                <a class="text-left pl-2 py-3 d-block mb-0 text-decoration-none" href="@Url.Action("Shoppingcart", "Buyer", new {})"><i class="bi bi-cart4"></i> 購物車</a>
+            </li>
+            <li class="list-unstyled aside-link">
+                <a class="text-left pl-2 py-3 d-block mb-0 text-decoration-none" href="@Url.Action("Wish", "Buyer", new {})"><i class="bi bi-star-half"></i> 個人願望清單</a>
+            </li>
+        }
     }
 </ul>
 
