--- a/CoreMVC5_UsedBookProject/Views/AdminToUser/UserEdit.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdminToUser/UserEdit.cshtml
@@ -12,6 +12,7 @@
     <div class="col-md-4">
         <form asp-action="UserEdit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+          <div class="form-group" style="display:flex; flex-direction:column;  gap:10px;">
             <div class="form-group">
                 <label asp-for="Id" class="control-label"></label>
                 <input asp-for="Id" class="form-control" readonly />
@@ -40,11 +41,12 @@
             <div class="form-group">
                 <input type="submit" value="保存" class="btn btn-primary" />
             </div>
+          </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-controller="AdminToUser" asp-action="UserData" class="btn btn-primary">返回使用者資料列表</a>
+    <a asp-controller="AdministratorProfile" asp-action="AdministratorData" class="return">返回管理員資料列表</a>
 </div>
 
