--- a/CoreMVC5_UsedBookProject/Views/AdministratorProfile/AdministratorDelete.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorProfile/AdministratorDelete.cshtml
@@ -3,7 +3,24 @@
 @{
     ViewData["Title"] = "管理員資料刪除";
 }
+<style>
+    .return {
+        padding: 10px;
+        text-decoration: none;
+        color: white;
+        background-color: blue;
+        transition: 0.7s;
+        border-radius: 5px;
+        border: 0;
+    }
 
+        .return:hover {
+            text-decoration: none;
+            color: blue;
+            background-color: white;
+            border: 1px blue solid;
+        }
+</style>
 <h1>管理員資料刪除</h1>
 
 <h3>你確定要刪除這筆資料嗎</h3>
@@ -45,6 +62,6 @@
     
     <form asp-action="AdministratorDelete">
         <input type="submit" value="刪除" class="btn btn-danger" /> |
-        <a asp-controller="AdministratorProfile" asp-action="AdministratorData" class="btn btn-primary">返回管理員資料列表</a>
+        <a asp-controller="AdministratorProfile" asp-action="AdministratorData" class="return">返回管理員資料列表</a>
     </form>
 </div>
